fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -42,14 +42,14 @@ footer {
   position: absolute;
   right: 0;
   overflow: hidden;
-  margin-right: 40em;
+  margin-right: 38em;
 }
 
 .btn-outline-success {
   position: absolute;
   right: 0;
   overflow: hidden;
-  margin-right: 28em;
+  margin-right: 25em;
 }
 
 .btn-outline-warning {
